Refactored Code